@@ -1335,12 +1335,27 @@ class Namespace(object):
     """Class to allow storing attributes in new namespace. """
     def __getattr__(self, key):
         # a.this causes a __getattr__ call for key = 'this'
-        return self.__dict__[key]
+        try:
+            return self.__dict__[key]
+        except KeyError:
+            raise AttributeError('"{}" is not known in the namespace.'
+                                 .format(key))
+
     def __setattr__(self, key, value):
         # a.this = 10 causes a __setattr__ call for key='this' value=10
-        self.__dict__[key] = value
+        try:
+            self.__dict__[key] = value
+        except KeyError:
+            raise AttributeError('"{}" is not known in the namespace.'
+                                 .format(key))
+
     def __delattr__(self, key):
-        del self.__dict__[key]
+        try:
+            del self.__dict__[key]
+        except KeyError:
+            raise AttributeError('"{}" is not known in the namespace.'
+                                 .format(key))
+
     def __eq__(self, other):
         try:
             # this'll allow us to compare if we're storing arrays
@@ -1348,12 +1363,16 @@ class Namespace(object):
         except AssertionError:
             return False
         return True
+
     def __str__(self):
         return str(self.__dict__)
+
     def __len__(self):
         return len(self.__dict__)
+
     def __getitem__(self, key):
         return self.__dict__[key]
+
     def __iter__(self):
         for i in self.__dict__:
             yield i
